# yangcho_mba

./: .gitignore  CLAUDE.md  MBA_Preparation_Strategy_Candle.md  README.md  TODOS.md  design.md  pyproject.toml
.github/workflows/: daily-cron.yml  match-pending.yml
dashboard/: .env.example  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: admin_auth.ts  hero_cases.ts  queries.ts  storage.ts  supabase.ts
dashboard/types/: db.ts
data/: calendar.yaml  oy_brands.yaml
docs/: secrecy-checklist.md  tiktok-spike.md
pipeline/: __init__.py  cache.py  db.py  dedup.py  llm.py  observability.py  schemas.py  version.py
pipeline/analysis/: README.md  __init__.py  friction.py  influencer.py  marketing_post.py  match_product.py  moment_enrichment.py  product_idea.py  url_verify.py
pipeline/ingestion/: README.md  __init__.py  calendar.py  catalog.py  catalog_images.py  catalog_persist.py  google_trends.py  image_storage.py  oy_brands.py  reddit.py  tiktok.py
pipeline/orchestrator/: __init__.py  run.py
pipeline/playbook/: README.md  __init__.py
pipeline/prompts/: README.md  friction.md  influencer.md  marketing_post.md  product_idea.md  product_match.md  scoring.md  self_rating.md
pipeline/queue/: __init__.py
pipeline/scripts/: backfill_moment_enrichment.py  clean_broken_urls.py  inspect_tiktok.py  match_pending.py  refresh_catalog.py
pipeline/tests/: conftest.py  test_calendar.py  test_friction_prompt.py  test_orchestrator_smoke.py  test_schemas.py  (+1 more)
supabase/: README.md
(+26 files in other folders)
