[project]
name = "llc-pipeline"
version = "0.1.0"
description = "The Logic of Life-Care — daily-updating AI pipeline for K-Beauty mainstream-entry dashboard"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.0.0",
    "playwright>=1.48.0",
    "supabase>=2.10.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
asyncio_mode = "auto"
